--- a/django/bin/roub/static/public/css/tianhuxiyi.css
+++ b/django/bin/roub/static/public/css/tianhuxiyi.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 .tianhuxiyi-bg{
 	background:#efefef url(../img/thxy_bg.jpg) no-repeat top center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 .tianhuxiyi{ padding-bottom:4.9rem}
 .tianhuxiyi section
@@ -57,7 +57,7 @@
 }
 .tianhuxiyi-nav ul li{
 	width:50%;
-	float:left;	
+	float:left;
 	padding:.25rem
 }
 .tianhuxiyi-nav ul li a{
@@ -148,7 +148,7 @@ a.tianhuxiyi-more{
 .tianhuxiyi-activity ul li p{
 	color:#afafaf;
 	font-size:1.1rem;
-	overflow:hidden; 
+	overflow:hidden;
 	white-space:nowrap;
 	text-overflow:ellipsis;
 	padding:0 1.4rem .6rem;
@@ -175,7 +175,7 @@ a.tianhuxiyi-more{
 .tianhuxiyi-infor ul li p{
 	color:#afafaf;
 	font-size:rem;
-	overflow:hidden; 
+	overflow:hidden;
 	white-space:nowrap;
 	text-overflow:ellipsis;
 	padding:.2rem 1.4rem .6rem;
@@ -209,7 +209,7 @@ section.tianhuxiyi-coupon{
 	padding:0 3rem;
 	height:5.7rem;
 	line-height:5.7rem;
-	color:#fff;	
+	color:#fff;
 }
 .coupon-name h4{
 	font-size:3.2rem;
@@ -231,7 +231,7 @@ section.tianhuxiyi-coupon{
 	padding-left:3.9rem;
 	line-height:1.7rem;
 	color:#afafaf;
-	overflow:hidden; 
+	overflow:hidden;
 	white-space:nowrap;
 	text-overflow:ellipsis;
 }
@@ -279,7 +279,7 @@ footer{
 	text-align:center;
 	padding:0 1rem;
 }
-.footer-menu li a{ 
+.footer-menu li a{
 	display:block;
 	color:#929292;
 	font-size:1rem;
@@ -298,29 +298,29 @@ footer{
 }
 .footer-menu li .home{
 	background:url(../img/ico_menu_home.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 .footer-menu li .msg{
 	background:url(../img/ico_menu_msg.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 
 .footer-menu li .my{
 	background:url(../img/ico_menu_my.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 .footer-menu li.current .home{
 	background:url(../img/ico_menu_home_ed.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 .footer-menu li.current .msg{
 	background:url(../img/ico_menu_msg_ed.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 
 .footer-menu li.current .my{
 	background:url(../img/ico_menu_my_ed.png) no-repeat center;
-	background-size:100% auto;	
+	background-size:100% auto;
 }
 /**/
 .payments li img {
@@ -371,7 +371,7 @@ footer{
 }
 #agreement .modal-s .modal-content {
   height: auto;
-  overflow:hidden 
+  overflow:hidden
 }
 #agreement .modal-body {
   padding-bottom:4.4rem;
@@ -418,4 +418,23 @@ footer{
 	color: #a2a2a6;
 	background: none;
 	border-radius: .5rem;
+}
+
+.header-back {
+	display: block;
+	width: 4.4rem;
+	height: 4.4rem;
+	/*position: absolute;*/
+	left: 0;
+	/*bottom: 0;*/
+	background-image: url("../img/ico_back.png");
+}
+
+
+.header p {
+	font-size: 1.8rem;
+	color: #fff;
+	line-height: 4.4rem;
+	text-align: center;
+	font-weight: normal;
 }
