--- a/django/bin/roub/templates/shop/shopList.html
+++ b/django/bin/roub/templates/shop/shopList.html
@@ -1,175 +1,290 @@
-{% extends 'public/common.html' %}
-{% block body %}
-<script src="__PUBLIC__/Js/jquery.cookie.js" type="text/javascript"></script>
-<script src="__PUBLIC__/Js/Mobile/flow2.js?v=127"></script>
-<link rel="stylesheet" href="__PUBLIC__/Js/artDialog/css/ui-dialog.css">
-<link rel="stylesheet" href="__PUBLIC__/Mobile/default/Css/productlist.css">
-<script src="__PUBLIC__/Js/artDialog/dist/dialog-min.js"></script>
-<script>
-var reqUrl = "{:U('Mobile/Choose/search',array('jid'=>$jid,'sid'=>$sid))}";
-var flowUrl = "{:U('Mobile/Flow/confirm',array('jid'=>$jid,'sid'=>$sid))}";
-var flowUrl2 = "{:U('Mobile/Flow/confirm',array('utoken'=>'xxx','jid'=>$jid,'sid'=>$sid))}";
-var mid = "{$mid}";
-var isApp = "{$isApp}";
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <title>Hello APP</title>
+    <link rel="stylesheet" type="text/css" href="/static_url/shop/css/api.css" />
+    <link rel="stylesheet" type="text/css" href="/static_url/shop/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="/static_url/shop/css/idangerous.swiper.css">
+    <link rel="stylesheet" href="/static_url/public/css/tianhuxiyi.css">
 
-$(document).ready(function(){
-	getProductContent({$default_cid},'');
-});
+
+
+    <style>
+        html,body{min-height:100%;background-color: #eee;}
+        body {position: relative;}
+        .h10 {height: 10px;}
+        .h50 {height: 50px;}
+        /* section 1 */
+        .section01 {height: 30px;line-height: 30px;text-align: center;color: #fff;background-color: #5AB06C;}
+
+
+        /**/
+        .item {display: table; height: 70px; width: 100%;}
+        .item .itemlogo , .item .itemshelf {display: table-cell; vertical-align: middle;float: left;}
+
+        .item .itemlogo {width: 70px;}
+        .item .itemlogo img  {margin-left: 10px;width: 40px;}
+        .item .itemshelf .shelfinfo01 {font-size: 20px;color: #000;}
+
+        .item {background-color: #fff;position: relative;border-bottom: 1px solid #d3d3d3;}
+        .item .itemlogo {position: absolute; top: 10px;}
+        .itemshelf {margin-left: 15px;display: block;/* 不再显示为table-cell */}
+        .item .userlogo img {width: 40px;padding: 2px; border: 1px solid #e7e7e7;border-radius: 2px;}
+        .itemshelf .shelfinfo01 {color: #000;font-size: 16px;line-height: 18px;margin-top: 10px;}
+        .itemshelf .ordering{color: #fff;font-size: 12px;background-color: #5bb06c;padding: 2px 4px;display: inline-block;}
+        .style2 .itemshelf .shelfinfo03 {color: #999;font-size: 12px;margin-right: 10px;border-bottom: 0;padding: 3px 0 5px 0;}
+        .itemshelf .staring {color: #999;font-size: 12px;line-height: 14px;margin-top: 5px;margin-bottom: 20px;}
+        .itemshelf .staring img {height: 12px;}
+
+        .item .buybtn {display: table-cell; vertical-align: middle;}  /*抽象布局信息*/
+        .item .buybtn p {color: #fff;background-color: #3893CF;float: right;padding: 5px 10px;margin-right: 10px;}
+
+        /* */
+        .shopcover {width: 100%;}
+        .section02 .itemshelf .shelfinfo03 {color: #999; font-size: 14px; margin-right: 10px; border-bottom: 0; padding: 5px 0 5px 0;}
+        .section02 .buybtn {display: table-cell; vertical-align: middle;}  /*抽象布局信息*/
+        .section02 .buybtn p {color: #fff;background-color: #5AB06C;float: right;padding: 5px 10px;margin-right: 10px;font-size: 14px;line-height: 20px;}
+        .section02 .buybtn .weixin {height: 20px; vertical-align: top; margin-right: 5px;}
+
+        .minusorder {float: right;display: none;position: relative;}
+        .minus {color: #fff; background-color: #3893CF; float: right; padding: 5px;margin-right: 15px;}
+        .numbg {height: 20px; margin-top: 5px; vertical-align: top;float: right;margin-right: 15px;}
+        .thisordernum {position: absolute; right: 16px; top: 5px; color: #fff; width: 20px; text-align: center; height: 20px;}
+        /* 暗色标题 */
+        .darktitle {height: 30px;line-height: 30px;color: #787878;margin-left: 15px;font-size: 14px;}
+
+        /* 底部信息 */
+        .bottom {height: 50px;background-color: #2f373e;position: fixed;bottom: 0;width: 100%;}
+        .bottom img {height: 30px;margin-top: 10px;margin-left: 15px;vertical-align: top;}
+        #minbuy {float: right;color: #fff;background-color: #404850;padding: 5px 10px;margin: 11px 10px 0 0;}
+        #buyit {float: right;color: #fff;background-color: #4DC060;padding: 5px 10px;margin: 11px 10px 0 0;display: none;}
+        .bottom .buyinfo {height: 50px; line-height: 50px; color: #fff;display: none;}
+        .bottom .buyinfo span {color: #fff;}
+
+        /* 悬浮样式 */
+        .itemhover {background-color: #eee !important;}
+        .total-hover {background-color: rgba(77, 192, 96, 0.6) !important;}
+    </style>
+</head>
+<body>
+    <header class="header tianhuxiyi-header">
+      <a href="javascript:history.go(-1);" class="ico header-back"></a>
+
+    </header>
+
+
+
+
+    <div class="darktitle">新品/促销</div>
+    <div class="item style2">
+        <div class="itemshelf">
+            <div class="shelfinfo01">大排</div>
+            <div class="shelfinfo03">25元五香大排套餐</div>
+            <div class="shelfinfo02 staring"><img src="/static_url/shop/image/star_45.png" alt="">&nbsp;月售6630份</div>
+        </div>
+        <div class="buybtn">
+            <p tapmode="" onclick="buyfood(0)">￥25</p>
+            <span class="minusorder">
+                <img src="/static_url/shop/image/foodlist_bg_foodnum.png" alt="" class="numbg"><span class="thisordernum">0</span>
+                <span class="minus" tapmode="" onclick="minuscash(0)">－</span>
+            </span>
+
+        </div>
+    </div>
+
+
+
+    <div class="darktitle">商务套餐</div>
+    <div class="item style2">
+        <div class="itemshelf">
+            <div class="shelfinfo01">20元</div>
+            <div class="shelfinfo03">20元商务套餐</div>
+            <div class="shelfinfo02 staring"><img src="../image/star_45.png" alt="">&nbsp;月售14438份</div>
+        </div>
+        <div class="buybtn"><p tapmode="" onclick="buyfood(1)">￥20</p>
+            <span class="minusorder">
+                <img src="../image/foodlist_bg_foodnum.png" alt="" class="numbg"><span class="thisordernum">0</span>
+                <span class="minus" tapmode="" onclick="minuscash(1)">－</span>
+            </span>
+        </div>
+    </div>
+    <div class="item style2">
+        <div class="itemshelf">
+            <div class="shelfinfo01">卤肉</div>
+            <div class="shelfinfo03">20元香菇卤肉套餐</div>
+            <div class="shelfinfo02 staring"><img src="../image/star_45.png" alt="">&nbsp;月售9587份</div>
+        </div>
+        <div class="buybtn"><p tapmode="" onclick="buyfood(2)">￥20</p>
+            <span class="minusorder">
+                <img src="../image/foodlist_bg_foodnum.png" alt="" class="numbg"><span class="thisordernum">0</span>
+                <span class="minus" tapmode="" onclick="minuscash(2)">－</span>
+            </span>
+        </div>
+    </div>
+
+
+
+    <div class="darktitle">精品商务套餐</div>
+    <div class="item style2">
+        <div class="itemshelf">
+            <div class="shelfinfo01">30元</div>
+            <div class="shelfinfo03">30元商务套餐</div>
+            <div class="shelfinfo02 staring"><img src="../image/star_45.png" alt="">&nbsp;月售2602份</div>
+        </div>
+        <div class="buybtn"><p tapmode="" onclick="buyfood(3)">￥30</p>
+            <span class="minusorder">
+                <img src="../image/foodlist_bg_foodnum.png" alt="" class="numbg"><span class="thisordernum">0</span>
+                <span class="minus" tapmode="" onclick="minuscash(3)">－</span>
+            </span>
+        </div>
+    </div>
+    <div class="item style2">
+        <div class="itemshelf">
+            <div class="shelfinfo01">排骨</div>
+            <div class="shelfinfo03">30元红烧排骨套餐</div>
+            <div class="shelfinfo02 staring"><img src="../image/star_45.png" alt="">&nbsp;月售2122份</div>
+        </div>
+        <div class="buybtn"><p tapmode="" onclick="buyfood(4)">￥30</p>
+            <span class="minusorder">
+                <img src="../image/foodlist_bg_foodnum.png" alt="" class="numbg"><span class="thisordernum">0</span>
+                <span class="minus" tapmode="" onclick="minuscash(4)">－</span>
+            </span>
+        </div>
+    </div>
+
+    <div class="h50"></div>
+    <div class="bottom">
+        <img src="../image/cart.png" alt="">
+        <span class="buyinfo" id="buyinfo"><span id="buynum">1</span>份 ￥<span id="totalcash">10</span></span>
+        <span id="minbuy">￥0元起送</span>
+        <span id="buyit" tapmode="total-hover" onclick="openNewWin()">去结算</span>
+    </div>
+
+</body>
+<script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript">
+var totalcash = 0;
+var buynum = 0;
+
+function buyfood (index) {
+    var buyinfodom = document.getElementById('buyinfo');
+    var buynumdom = document.getElementById('buynum');
+    var totalcashdom = document.getElementById('totalcash');
+    var minbuydom = document.getElementById('minbuy');
+    var buyitdom = document.getElementById('buyit');
+    var minusorderdom = document.getElementsByClassName('minusorder');
+    var thisordernumdom = document.getElementsByClassName('thisordernum');
+
+    var num = parseInt(thisordernumdom[index].innerHTML);
+    num += 1;
+
+    if (num >= 1) {
+        thisordernumdom[index].innerHTML = num;
+    }
+
+
+    minusorderdom[index].style.display = 'inline-block';
+
+    switch(index){
+        case 0:
+            totalcash += 25;
+            buynum += 1;
+            break;
+        case 1:
+        case 2:
+            totalcash += 20;
+            buynum += 1;
+            break;
+        case 3:
+        case 4:
+            totalcash += 30;
+            buynum += 1;
+            break;
+        default:
+            break;
+    }
+
+    if ( totalcash == 0) {
+        buyinfodom.style.display = 'none';
+    }
+    else {
+        buyitdom.style.display = 'inline-block';
+        minbuydom.style.display = 'none';
+        buyinfodom.style.display = 'inline-block';
+        buynumdom.innerHTML = buynum;
+        totalcashdom.innerHTML = totalcash;
+
+    }
+}
+
+function minuscash (index) {
+    var buyinfodom = document.getElementById('buyinfo');
+    var buynumdom = document.getElementById('buynum');
+    var totalcashdom = document.getElementById('totalcash');
+    var minbuydom = document.getElementById('minbuy');
+    var buyitdom = document.getElementById('buyit');
+    var minusorderdom = document.getElementsByClassName('minusorder');
+    var thisordernumdom = document.getElementsByClassName('thisordernum');
+
+    var num = thisordernumdom[index].innerHTML;
+    num -= 1;
+
+    if (num >= 1) {
+        thisordernumdom[index].innerHTML = num;
+    }
+    else{
+        thisordernumdom[index].innerHTML = num;
+        minusorderdom[index].style.display = 'none';
+    }
+
+    switch(index){
+        case 0:
+            totalcash -= 25;
+            buynum -= 1;
+            break;
+        case 1:
+        case 2:
+            totalcash -= 20;
+            buynum -= 1;
+            break;
+        case 3:
+        case 4:
+            totalcash -= 30;
+            buynum -= 1;
+            break;
+        default:
+            break;
+    }
+
+    if ( totalcash == 0) {
+        buyinfodom.style.display = 'none';
+        minbuydom .style.display = 'inline-block';
+        buyitdom.style.display = 'none';
+    }
+    else {
+        // buyitdom.style.display = 'inline-block';
+        // minbuydom.style.display = 'none';
+        buyinfodom.style.display = 'inline-block';
+        buynumdom.innerHTML = buynum;
+        totalcashdom.innerHTML = totalcash;
+
+    }
+}
+
+function openNewWin() {
+    api.openWin ({
+        name: 'login',
+        url: './'+'login'+'.html',
+        rect:{
+            x:0,
+            y:0,
+            w:'auto',
+            h:'auto'
+        },
+        bounces: false
+    });
+}
 </script>
-	 <div class="tab-nav tab-product jstab-nav">
-		<div class="container">
-			<div class="product-catg">
-			<ul>
-            	<volist name="category_list" id="vo" >
-                    <li cid="{$vo.cid}" <if condition="$key eq 0">class="active"</if>><a href="javascript:void(0)">{$vo.cname}</a></li>
-                </volist>
-			</ul>
-			</div>
-			<a href="javascript:;" class="ico ico-catg-down" id="catgDownBtn"></a>
-		</div>
-	</div>
-	<div class="main container pt-90 pb-50" id="productContent">
-
-	</div>
-	<footer class="bottomBar clearfix">
-		<div class="container">
-		<div class="cart clearfix">
-			<div class="ico ico-cart" id="cartBtn"><span class="cartNumber">0</span></div>
-			<div class="cart-price">共<span class="cartPrice">0</span></div>
-		</div>
-		<a class="btn btn-primary" id="okBtn" href="javascript:;">选好了</a>
-		<a class="btn btn-primary showbox3" id="subBtn" href="javascript:;" style="display:none;">提交订单</a>
-		</div>
-	</footer>
-    <div class="cart-modal" id="cartModal" style='display:none;'>
-		<div class="cart-dialog">
-			<div class="order-cart" id="cart_table">
-			</div>
-		</div>
-	</div>
-	<div class="cart-modal" id="cartModal" style='display:none;'>
-		<div class="cart-dialog">
-			<div class="order-cart" id="cart_table">
-
-			</div>
-		</div>
-	</div>
-
-	<div class="catg-modal" id="catgModal" style="display:none;">
-		<div class="catg-dialog">
-			<div class="catg-modal-sort clearfix jstab-nav-two">
-				<div class="catg-modal-head">切换分类<a href="javascript:;" class="ico ico-catg-up" id="catgUpBtn"></a></div>
-				<ul class="clearfix">
-                	<volist name="category_list" id="vo" >
-                        <li cid="{$vo.cid}" <if condition="$key eq 0">class="active"</if>><a href="javascript:void(0)">{$vo.cname}</a></li>
-                    </volist>
-				</ul>
-			</div>
-		</div>
-	</div>
-    <script src="__PUBLIC__/Js/Mobile/jquery.lazyload.min.js"></script>
-	<script>
-		var rcid = "{$rcid}";
-		if(rcid > 0){
-			$(".jstab-nav ul li").each(function() {
-                $(this).removeClass();
-            });
-			$(".jstab-nav ul").find('li').attr("cid",function(n,v){
-		      if(v == rcid){
-		      	$(this).addClass('active');
-		      }
-		    });
-		}
-		var oTabNavUl = $(".jstab-nav ul");
-		var aTabNavLi = $(".jstab-nav li");
-		var aTabNavLiA = $(".jstab-nav li a");
-		var len = aTabNavLi.length;
-		var catgDownBtnWidth = $("#catgDownBtn").outerWidth();
-		var ulWidth = catgDownBtnWidth;
-
-		for (var i = 0; i < len; i++) {
-			ulWidth = ulWidth + aTabNavLi.eq(i).outerWidth()+1;
-		}
-		oTabNavUl.css('width', ulWidth);
-
-		aTabNavLiA.click(function() {
-			aTabNavLi.removeClass('active');
-			$(this).parent('li').addClass('active');
-			var cid = $(this).parent("li").attr('cid');
-			getProductContent(cid,'');
-		});
-
-		var aTabNavLiTwo = $(".jstab-nav-two li");
-		var aTabNavLiATwo = $(".jstab-nav-two li a");
-		aTabNavLiATwo.click(function() {
-			aTabNavLiTwo.removeClass('active');
-			$(this).parent('li').addClass('active');
-			var cid = $(this).parent("li").attr('cid');
-			getProductContent(cid,'');
-			$(".jstab-nav ul li").each(function() {
-                $(this).removeClass();
-            });
-			$(".jstab-nav ul").find('li').attr("cid",function(n,v){
-		      if(v == cid){
-		      	$(this).addClass('active');
-		      }
-		    });
-		});
-
-
-		$('img').lazyload({
-	        threshold: 0,
-	        effect: 'fadeIn',
-	        skip_invisible: false
-	    });
-
-		// 购物车弹出框
-		// 购物车弹出框
-		var cartModal = $("#cartModal");
-		$("#cartBtn").click(function(ev) {
-			showCart();
-			cartModal.show();
-			$("#okBtn").hide();
-			$("#subBtn").show();
-			$(this).hide();
-
-		});
-
-		$("#okBtn").click(function(ev) {
-			showCart();
-			cartModal.show();
-			$("#cartBtn").hide();
-			$("#subBtn").show();
-			$(this).hide();
-		});
-
-		$(".cart-dialog").click(function(ev) {
-			$(".cart-modal").hide();
-			$("#cartBtn").show();
-			$("#subBtn").hide();
-			$("#okBtn").show();
-		});
-
-		$(".order-cart").click(function(ev) {
-			ev.stopPropagation();
-		});
-
-		//切换分类
-		var oCatgDownBtn = $("#catgDownBtn");
-		var oCatgModal = $("#catgModal");
-		var oCatgUpBtn = $("#catgUpBtn");
-
-		oCatgDownBtn.click(function() {
-			var _this = $(this);
-			oCatgModal.show();
-		});
-		oCatgUpBtn.click(function() {
-			var _this = $(this);
-			oCatgModal.hide();
-		});
-		$(".catg-dialog").click(function(ev) {
-			$(".catg-modal").hide();
-			ev.stopPropagation();
-		});
-	</script>
-{% endblock %}
+</html>
